# cellular-automaton-rust-flutter

./: .gitignore  README.md
cellular-automaton/ca_app/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
cellular-automaton/ca_app/lib/: main.dart
cellular-automaton/ca_app/lib/state/: simulation_state.dart
cellular-automaton/ca_app/lib/widgets/: simulation_screen.dart
cellular-automaton/ca_app/test/: widget_test.dart
cellular-automaton/ca_app/web/: index.html
cellular-automaton/ca_core/: Cargo.toml
cellular-automaton/ca_core/src/: api.rs  config.rs  grid.rs  lib.rs  simulator.rs  zone.rs
cellular-automaton/ca_core/src/export/: csv.rs  json.rs  mod.rs  png.rs
cellular-automaton/ca_core/src/rules/: game_of_life.rs  high_life.rs  maze.rs  mod.rs  seeds.rs
